kube/couchdb/couchdb-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: couchdb
  labels:
    app: couchdb
    app.kubernetes.io/name: couchdb
